--- a/koncept.qmd
+++ b/koncept.qmd
@@ -19,8 +19,8 @@ editor_options:
   chunk_output_type: console
 ---
 
-::: {#fig-cover layout="[[2, -1]]"}
-![](filer/generelt/wcpp-finale-2019.png)
+::: {#fig-cover}
+![](filer/generelt/wcpp-finale-2019.png){width=40em}
 
 Billede fra WCPP-finalen 2019.
 :::
