--- a/regler.qmd
+++ b/regler.qmd
@@ -10,8 +10,8 @@ editor_options:
   chunk_output_type: console
 ---
 
-::: {#fig-cover layout="[[2, -1]]"}
-![](filer/generelt/wcpp-finale-2020.png)
+::: {#fig-cover}
+![](filer/generelt/wcpp-finale-2020.png){width=40em}
 
 Billede fra WCPP-finalen 2020.
 :::
