--- a/indbydelse-tilmelding-2024.qmd
+++ b/indbydelse-tilmelding-2024.qmd
@@ -35,6 +35,7 @@ editor_options:
 ---
 
 ```{r}
+#| label: info-nedtaelling-plakat
 #| output: asis
 cat(knitr::raw_html(DataEventAarAkt_T$InfoNedtælling_DW))
 cat(DataEventAarAkt_T$InfoPlakatCTA_DW)
@@ -277,10 +278,7 @@ if(nrow(DataResultSidst_T) == 0) {
 ::: {.callout-tip .g-col-12 .g-col-md-12 style="font-style:italic"}
 ## Ping Pong regler
 
-```{r}
-#| output: asis
-cat(DataEventAarAkt_T$InfoTipRegler_DW)
-```
+`r DataEventAarAkt_T$InfoTipRegler_DW`
 :::
 :::
 
@@ -431,10 +429,7 @@ cat(paste0(
 ::: {.callout-tip style="font-style:italic"}
 ## Tip
 
-```{r}
-#| output: asis
-cat(DataEventAarAkt_T$InfoTipPraemierDeltagere_DW)
-```
+`r DataEventAarAkt_T$InfoTipPraemierDeltagere_DW`
 :::
 
 ::: {.callout-note style="font-style:italic"}
